--- a/src/assets/json/config.json
+++ b/src/assets/json/config.json
@@ -1,5 +1,5 @@
 [
-    { "host": "http://10.0.0.110/sistema_zecarlos/apiVulto/index.php", "api": "apiCliente" },
-    { "host": "http://api.vulto.site/index.php", "api": "apiCliente" }
+    { "host": "http://api.vulto.site/index.php", "api": "apiCliente" },
+    { "host": "http://10.0.0.110/sistema_zecarlos/apiVulto/index.php", "api": "apiCliente" }
 
 ]
