--- a/angular.json
+++ b/angular.json
@@ -24,8 +24,9 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+                            "./node_modules/bootstrap/dist/css/bootstrap.css",
                             "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+                            "./node_modules/font-awesome/css/font-awesome.min.css",
                             "src/styles.css"
                         ],
                         "scripts": [
