--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@angular/router": "~9.0.7",
     "@fortawesome/fontawesome-free": "^5.15.1",
     "bootstrap": "^4.5.3",
+    "email-validator": "^2.0.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "ng-lazyload-image": "^9.0.1",
+    "ngx-mask": "^10.0.4",
     "ngx-responsive": "^8.2.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
