--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "email-validator": "^2.0.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "js-cookie": "^2.2.1",
     "ng-lazyload-image": "^9.0.1",
+    "ngx-cookie-service": "^10.1.1",
     "ngx-mask": "^10.0.4",
     "ngx-responsive": "^8.2.0",
     "popper.js": "^1.16.1",
