--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~9.0.7",
     "@fortawesome/fontawesome-free": "^5.15.1",
     "bootstrap": "^4.5.3",
+    "deep-equal": "^2.0.4",
     "email-validator": "^2.0.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
