--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "angular-responsive-carousel": "^2.0.2",
     "bootstrap": "^4.5.3",
     "deep-equal": "^2.0.4",
     "email-validator": "^2.0.4",
