--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ngx-cookie-service": "^10.1.1",
     "ngx-mask": "^10.0.4",
     "ngx-responsive": "^8.2.0",
+    "ngx-skeleton-loader": "^2.6.2",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
