--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~9.0.7",
     "@fortawesome/fontawesome-free": "^5.15.1",
     "angular-responsive-carousel": "^2.0.2",
+    "angularx-social-login": "^3.5.4",
     "bootstrap": "^4.5.3",
     "deep-equal": "^2.0.4",
     "email-validator": "^2.0.4",
@@ -31,6 +32,7 @@
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
     "ng-lazyload-image": "^9.0.1",
+    "ng2-currency-mask": "^9.0.2",
     "ngx-cookie-service": "^10.1.1",
     "ngx-mask": "^10.0.4",
     "ngx-owl-carousel-o": "^5.0.0",
