--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ng2-currency-mask": "^9.0.2",
     "ngx-cookie-service": "^10.1.1",
     "ngx-mask": "^10.0.4",
+    "ngx-order-pipe": "^2.1.1",
     "ngx-owl-carousel-o": "^5.0.0",
     "ngx-responsive": "^8.2.0",
     "ngx-skeleton-loader": "^2.6.2",
