--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -22,5 +22,5 @@ jobs:
         server: ${{ secrets.ftp_host }}
         username: ${{ secrets.ftp_username }}
         password: ${{ secrets.ftp_password }}
-        local-dir: dist/siteDelivery/
+        local-dir: dist/webdelivery/
         server-dir: jfortal.store/
